--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -1,67 +1,58 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background: #f5f5f5;
-    text-align: center;
-}
+  body {
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-h1 {
-    margin-top: 50px;
-    font-size: 35px;
-    font-weight: bold;
-}
+        img {
+            width: 100%;
+        }
 
-.card {
-    width: 350px;
-    background: white;
-    margin: 40px auto;
-    box-shadow: 0px 5px 15px rgba(0,0,0,0.3);
-}
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
+        .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 350px;
+            height: auto;
+        }
 
-.profile-pic {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-}
+        .cardcontainer {
+            position: relative;
+            height: 500px;
+            text-align: center;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        }
 
-.name {
-    font-size: 30px;
-    font-weight: bold;
-    padding-top: 20px;
-}
+        .cardcontainer {
+            font-family: 'Courier New', Courier, monospace;
+        }
 
-.desc {
-    color: gray;
-    font-size: 18px;
-    padding-top: 10px;
-}
+        .contact {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 50px;
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-.login {
-    font-size: 16px;
-    padding-top: 10px;
-    font-weight: bold;
-}
-
-.social {
-    padding: 20px 0;
-}
-
-.social img {
-    width: 22px;
-    margin: 0 5px;
-}
-
-.btn {
-    display: block;
-    background: black;
-    color: white;
-    text-decoration: none;
-    padding: 18px 0;
-    font-size: 18px;
-}
+        .contact p {
+            color: white;
+        }
